--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,7 @@
     <title>Mybrary</title>
 </head>
 <body>
-    <header><h1>Header</h1></header>
+    <%- include('../partials/header.ejs') %>
     <%- body %>
     <br>
     <br>
