--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,1 +1,8 @@
-New author
+<h2>New author</h2>
+
+<form action="/authors" method="POST">
+    <%- include('_form_inputs') %>
+    <br>
+    <button type="submit">Create</button>
+    <a href="/authors">Cancel</a>
+</form>
