--- a/views/authors/_form_inputs.ejs
+++ b/views/authors/_form_inputs.ejs
@@ -1,7 +1,7 @@
 <label>Name:
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name" required>
 </label>
 <br>
 <label>Age:
-    <input type="number" name="age" id="age">
+    <input type="number" name="age" id="age" required>
 </label>
