Case-insensitive search seems to be implemented

--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,1 +1,13 @@
-All authors
+<h2>All authors</h2>
+
+<form action="/authors" method="GET">
+    <label for="">
+        <input type="text" name="pattern" id="pattern">
+    </label>
+    <button type="submit">Search</button>
+</form>
+
+<% authors.forEach(author => { %>
+    <div><%= author.name %> </div>
+<% }) %>
+
