If error occurred while creation of new author data in fields does not erase

--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -2,7 +2,7 @@
 
 <form action="/authors" method="GET">
     <label for="">
-        <input type="text" name="pattern" id="pattern">
+        <input type="text" name="pattern" id="pattern" value="<%= pattern %>">
     </label>
     <button type="submit">Search</button>
 </form>
