--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>All authors</h2>
+<h3>Search authors</h3>
 
 <form action="/authors" method="GET">
     <label for="">
@@ -7,7 +7,14 @@
     <button type="submit">Search</button>
 </form>
 
-<% authors.forEach(author => { %>
-    <div><%= author.name %> </div>
-<% }) %>
+<h2>All authors</h2>
+
+<div class="authors">
+    <ul>
+        <% authors.forEach(author => { %>
+            <li><div><%= author.name %> </div></li>
+        <% }) %>
+    </ul>
+
+</div>
 
