FilePond for file inputs has been engaged. Book creation is impossible for a while

--- a/views/books/_form_inputs.ejs
+++ b/views/books/_form_inputs.ejs
@@ -35,7 +35,7 @@
 
 <div>
     <label>Cover:
-        <input type="file" name="cover" id="cover">
+        <input type="file" name="cover" id="cover" class="filepond">
     </label>
 </div>
 
