--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -25,7 +25,7 @@
     <button type="submit">Search books</button>
 </form>
 
-<h2>All books</h2>
+<h2>All books. Totally <%= entriesCol %></h2>
 
 <div class="books">
     <ul>
