Authors with books can not be deleted

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -30,12 +30,7 @@
 <div class="books">
     <ul>
         <% books.forEach(book => { %>
-            <li><div>
-                    <h5><%= book.title %> </h5>
-                    <img height="150" width="100"
-                         src="<%= book.coverImagePath %>" alt="<% book.title %>">
-                </div>
-            </li>
+            <%- include('../partials/renderBook', { book }) %>
         <% }) %>
     </ul>
 </div>
