--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,6 +1,6 @@
 <h2>Editing <%= book.title %></h2>
 
-<form action="/books?_method=PUT" method="POST">
+<form action="/books/<%= book.ID %>?_method=PUT" method="POST">
     <%- include('_form_inputs') %>
     <br>
     <button type="submit">Create</button>
