--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -3,6 +3,6 @@
 <form action="/books/<%= book.ID %>?_method=PUT" method="POST">
     <%- include('_form_inputs') %>
     <br>
-    <button type="submit">Create</button>
+    <button type="submit">Update</button>
     <a href="/books">Cancel</a>
 </form>
