Font has been added

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,6 +16,8 @@
 
     <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
     <script defer src="/js/fileUpload.js"></script>
+    <link rel="stylesheet" href="/stylesheets/css/general.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/main.css" type="text/css">
     <title>Mybrary</title>
 </head>
 <body>
