--- a/public/stylesheets/css/general.css
+++ b/public/stylesheets/css/general.css
@@ -1,13 +1,29 @@
-* {
+@import '../shared/variables.css';
+
+*, *::before, *::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-
 body, html {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to right, blue, dodgerblue);
-    color: lightblue;
+    background-image: linear-gradient(to right,
+    var(--color-background-dark),  var(--color-background-light));
+}
+
+.container {
+    max-width: 75em;
+    margin: auto;
+    margin-bottom: 2rem;
+}
+
+.content {
+    margin: 0 2em;
+}
+
+.page-header {
+    font-size: 2rem;
+    font-weight: bold;
 }
