--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,9 @@
 @import 'shared/fonts.css';
+@import 'css/general.css';
+@import 'css/header.css';
 
 :root {
     font-family: 'Gotham Rounded', sans-serif;
     font-size: 1.25em;
+    color: var(--color-text-light);
 }
