--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,16 +16,20 @@
 
     <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
     <script defer src="/js/fileUpload.js"></script>
-    <link rel="stylesheet" href="/stylesheets/css/general.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/main.css" type="text/css">
     <title>Mybrary</title>
 </head>
 <body>
-    <%- include('../partials/header.ejs') %>
-    <%- include('../partials/errorMessage.ejs') %>
-    <%- body %>
-    <br>
-    <br>
-    <footer>Footer</footer>
+    <div class="container">
+        <%- include('../partials/header.ejs') %>
+        <div class="content">
+            <%- include('../partials/errorMessage.ejs') %>
+            <%- body %>
+        </div>
+
+        <footer>Footer</footer>
+    </div>
+
+
 </body>
 </html>
