--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,4 +1,4 @@
-<h3>Search books</h3>
+<h3 class="page-header">Search books</h3>
 
 <form action="/books" method="GET">
     <div>
@@ -22,7 +22,7 @@
         </label>
     </div>
 
-    <button type="submit">Search books</button>
+    <button class="btn btn-primary" type="submit">Search books</button>
 </form>
 
 <h2>All books. Totally <%= entriesCol %></h2>
