--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,8 +1,8 @@
-<h2>New author</h2>
+<h2 class="page-header">New author</h2>
 
 <form action="/authors" method="POST">
     <%- include('_form_inputs') %>
     <br>
-    <button type="submit">Create</button>
-    <a href="/authors">Cancel</a>
+    <button class="btn btn-primary" type="submit">Create</button>
+    <a class="btn btn-primary"  href="/authors">Cancel</a>
 </form>
