--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,8 +1,8 @@
-<h2>New book</h2>
+<h2 class="page-header">New book</h2>
 
 <form action="/books" method="POST">
     <%- include('_form_inputs') %>
     <br>
-    <button type="submit">Create</button>
-    <a href="/books">Cancel</a>
+    <button class="btn btn-primary" type="submit">Create</button>
+    <a class="btn btn-primary"  href="/books">Cancel</a>
 </form>
