Form styles have been added

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,7 @@
 @import 'css/general.css';
 @import 'css/header.css';
 @import 'css/buttons.css';
+@import 'css/forms.css';
 
 :root {
     font-family: 'Gotham Rounded', sans-serif;
