--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -2,7 +2,8 @@
 
 <form action="/books" method="POST">
     <%- include('_form_inputs') %>
-    <br>
-    <button class="btn btn-primary" type="submit">Create</button>
-    <a class="btn btn-primary"  href="/books">Cancel</a>
+    <div class="btn-row form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Create</button>
+        <a class="btn btn-primary"  href="/books">Cancel</a>
+    </div>
 </form>
