--- a/views/authors/_form_inputs.ejs
+++ b/views/authors/_form_inputs.ejs
@@ -1,7 +1,12 @@
-<label>Name:
-    <input type="text" name="name" id="name" value="<%= author?.name %>">
-</label>
-<br>
-<label>Age:
-    <input type="number" name="age" id="age" value="<%= author?.age %>">
-</label>
+<div class="form-row">
+    <div class="form-item">
+        <label>Name:</label>
+        <input type="text" name="name" id="name" value="<%= author?.name %>">
+    </div>
+    <div class="form-item">
+        <label>Age: </label>
+        <input type="number" name="age" id="age" value="<%= author?.age %>">
+    </div>
+
+
+</div>
