--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -2,7 +2,9 @@
 
 <form action="/authors/<%= author.ID %>?_method=PUT" method="POST">
     <%- include('_form_inputs') %>
-    <br>
-    <button class="btn btn-primary" type="submit">Update</button>
-    <a href="/authors/<%= author.ID %>">Cancel</a>
+
+    <div class="btn-row form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Update</button>
+        <a class="btn btn-primary" href="/authors/<%= author.ID %>">Cancel</a>
+    </div>
 </form>
