--- a/views/authors/profile.ejs
+++ b/views/authors/profile.ejs
@@ -1,9 +1,11 @@
 <h2 class="page-header"><%= author.name %> Info</h2>
 
-<button><a class="btn btn-primary" href="/authors/<%= author.ID %>/edit">Edit</a></button>
-<%- include('../partials/deleteForm', { url: `/authors/${author.ID}` }) %>
+<div class="btn-row">
+    <a class="btn btn-primary" href="/authors/<%= author.ID %>/edit">Edit</a>
+    <%- include('../partials/deleteForm', { url: `/authors/${author.ID}` }) %>
+</div>
 
-<h3>Books by author</h3>
+<h3 class="page-header">Books by author</h3>
 <% if (books.length) { %>
     <div class="books">
         <ul>
