--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -2,7 +2,9 @@
 
 <form action="/books/<%= book.ID %>?_method=PUT" method="POST">
     <%- include('_form_inputs') %>
-    <br>
-    <button  class="btn btn-primary" type="submit">Update</button>
-    <a class="btn btn-primary"  href="/books">Cancel</a>
+
+    <div class="btn-row form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Update</button>
+        <a class="btn btn-primary"  href="/books">Cancel</a>
+    </div>
 </form>
