--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,28 +1,31 @@
 <h3 class="page-header">Search books</h3>
 
 <form action="/books" method="GET">
-    <div>
-        <label for="">Title
-            <input type="text" name="title" id="title"
-                   value="<%= searchOptions.title %>">
-        </label>
+
+    <div class="form-item">
+        <label for="">Title</label>
+        <input type="text" name="title" id="title" value="<%= searchOptions.title %>">
     </div>
 
-    <div>
-        <label for="">Published after
+    <div class="form-row">
+        <div class="form-item">
+            <label for="">Published after</label>
             <input type="date" name="publishedAfter" id="publishedAfter"
-                   value="<%= searchOptions.publishedAfter %>">
-        </label>
-    </div>
+                       value="<%= searchOptions.publishedAfter %>">
 
-    <div>
-        <label for="">Published before
+        </div>
+
+        <div class="form-item">
+            <label for="">Published before</label>
             <input type="date" name="publishedBefore" id="publishedBefore"
-                   value="<%= searchOptions.publishedBefore %>">
-        </label>
+                       value="<%= searchOptions.publishedBefore %>">
+
+        </div>
     </div>
 
-    <button class="btn btn-primary" type="submit">Search books</button>
+    <div class="btn-row form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Search books</button>
+    </div>
 </form>
 
 <h2>All books. Totally <%= entriesCol %></h2>
