--- a/views/books/_form_inputs.ejs
+++ b/views/books/_form_inputs.ejs
@@ -39,7 +39,7 @@
 <div class="form-row">
     <div class="form-item no-grow">
         <label>Cover:</label>
-        <input type="file" name="cover" id="cover" class="filepond">
+        <input type="file" name="cover" id="cover" class="book-cover filepond">
 
     </div>
 
