--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,7 +16,7 @@
 
     <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
     <script defer src="/js/fileUpload.js"></script>
-    <link rel="stylesheet" href="/stylesheets/main.css" type="text/css">
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css" type="text/css">
     <title>Mybrary</title>
 </head>
 <body>
