Forms for login and register have been created, functionality will be added later

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
             <li ><a class="header-link" href="/books">Books</a></li>
             <li><a class="header-link" href="/books/new">Add Book</a></li>
             <li><a class="header-link" href="/authors">Authors</a></li>
-            <li><a class="header-link" href="/authors/new">Add Author</a></li>
+            <li><a class="header-link" href="/authors/login">Login/Register</a></li>
         </ul>
     </div>
 
