--- a/public/stylesheets/css/buttons.css
+++ b/public/stylesheets/css/buttons.css
@@ -11,6 +11,7 @@
 }
 
 .btn {
+    display: inline-block;
     padding: .5rem;
     border: 1px solid var(--btn-border-color);
     border-radius: .5rem;
