--- a/views/authors/_form_inputs.ejs
+++ b/views/authors/_form_inputs.ejs
@@ -1,12 +1,25 @@
 <div class="form-row">
     <div class="form-item">
-        <label>Name:</label>
-        <input type="text" name="name" id="name" value="<%= author?.name %>">
+        <label for="name">Name </label>
+        <input type="text" name="name" id="name" value="<%= author?.name %>" required>
     </div>
     <div class="form-item">
-        <label>Age: </label>
-        <input type="number" name="age" id="age" value="<%= author?.age %>">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" value="<%= author?.email %>" required>
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-item">
+        <label for="password">Password</label>
+        <input  type="password" name="password" id="password" value="<%= author?.password %>" required>
     </div>
 
-
+    <div class="form-item">
+        <label for="age">Age</label>
+        <input  type="age" name="age" id="age" value="<%= author?.age %>" required>
+    </div>
+</div>
+<div class="form-item">
+    <label for="biography">Biography</label>
+    <textarea name="biography" id="biography" cols="30" rows="10" value="<%= author?.biography %>"></textarea>
 </div>
