--- a/views/authors/register.ejs
+++ b/views/authors/register.ejs
@@ -1,31 +1,7 @@
 <h1>Register</h1>
 
 <form action="" method="POST">
-    <div class="form-row">
-        <div class="form-item">
-            <label for="name">Name </label>
-            <input type="text" name="name" id="name" value="<%= author?.name %>" required>
-        </div>
-        <div class="form-item">
-            <label for="email">Email</label>
-            <input type="text" name="email" id="email" value="<%= author?.email %>" required>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-item">
-            <label for="password">Password</label>
-            <input  type="password" name="password" id="password" value="<%= author?.password %>" required>
-        </div>
-
-        <div class="form-item">
-            <label for="age">Age</label>
-            <input  type="age" name="age" id="age" value="<%= author?.age %>" required>
-        </div>
-    </div>
-    <div class="form-item">
-        <label for="biography">Biography</label>
-        <textarea name="biography" id="biography" cols="30" rows="10" value="<%= author?.biography %>"></textarea>
-    </div>
+    <%- include('_form_inputs')%>
 
     <button class="btn btn-primary" type="submit">Register</button>
 </form>
