Error with deleting author with books has been fixed. Book now can be edited/deleted only by author

--- a/views/authors/_form_inputs.ejs
+++ b/views/authors/_form_inputs.ejs
@@ -16,10 +16,10 @@
 
     <div class="form-item">
         <label for="age">Age</label>
-        <input  type="age" name="age" id="age" value="<%= author?.age %>" required>
+        <input  type="age" name="age" id="age" value="<%= author?.age %>">
     </div>
 </div>
 <div class="form-item">
     <label for="biography">Biography</label>
-    <textarea name="biography" id="biography" cols="30" rows="10" value="<%= author?.biography %>"></textarea>
+    <textarea name="biography" id="biography" cols="30" rows="10"><%= author?.biography %></textarea>
 </div>
