--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,6 +16,7 @@
 
     <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
     <script defer src="/js/fileUpload.js"></script>
+    <script defer src="/js/confirmDanger.js"></script>
     <link id="main-css" rel="stylesheet" href="/stylesheets/main.css" type="text/css">
     <title>Mybrary</title>
 </head>
