--- a/views/partials/showMessages.ejs
+++ b/views/partials/showMessages.ejs
@@ -1,11 +1,11 @@
-<% if (messages.info) { %>
-    <div class="mes info"><%= messages.info %></div>
-<% } %>
-
-<% if (messages.error) { %>
-    <div class="mes error"><%= messages.error %></div>
-<% } %>
-
-<% if (messages.success) { %>
-    <div class="mes success"><%= messages.success %></div>
+<% for (let mess of messages) { %>
+    <% if ('info' in mess) { %>
+        <div class="mes info"><%= mess.info %></div>
+    <% } %>
+    <% if ('error' in mess) { %>
+        <div class="mes error"><%= mess.error %></div>
+    <% } %>
+    <% if ('success' in mess) { %>
+        <div class="mes success"><%= mess.success %></div>
+    <% } %>
 <% } %>
