Books can be sorted by rating now + rating is displayed in the book profile

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -21,6 +21,11 @@
                        value="<%= searchOptions.publishedBefore %>">
 
         </div>
+        <div class="form-item">
+            <label for="sortByRating">Sort by rating: </label>
+            <input type="checkbox" name="sortByRating" id="sortByRating">
+
+        </div>
     </div>
 
     <div class="btn-row form-row form-row-end">
