Fancy (?) cards for books have been created but may be changed later

--- a/public/stylesheets/css/marks.css
+++ b/public/stylesheets/css/marks.css
@@ -43,7 +43,7 @@
     position: relative;
 }
 
-.star-rating input:hover + i,
+.star-rating input:not([disabled]):hover + i,
 .star-rating input:checked + i {
     opacity: 1;
 }
@@ -76,6 +76,5 @@
 
 .leave-mark button[type="submit"] {
     position: relative;
-
     bottom: .6rem;
 }
