--- a/public/stylesheets/css/books.css
+++ b/public/stylesheets/css/books.css
@@ -1,22 +1,50 @@
 :root {
-    --book-cover-width: 200px;
+    --book-cover-width: 250px;
     --book-cover-width-large: 350px;
     --book-cover-aspect-ratio: 0.75;
 }
 
-.book {
+.book-card {
     text-align: center;
+    transition: var(--transition);
+    width: var(--book-cover-width-large);
+    border: 2px solid  transparent;
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
+
 }
 
-.book-cover {
+.book-card .book-card-info {
+    display: none;
+}
+
+.book-card:hover {
+    border: 2px solid var(--color-text-light);
+}
+
+.book-card:hover .book-cover-large, .book-cover {
     width: var(--book-cover-width);
     height: calc(var(--book-cover-width) / var(--book-cover-aspect-ratio));
+}
+
+.book-card:hover .book-card-info {
+    display: block;
 }
 
 .book-cover-large {
 
     width: var(--book-cover-width-large);
     height: calc(var(--book-cover-width-large) / var(--book-cover-aspect-ratio));
+}
+
+.book-cover {
+
+    width: var(--book-cover-width);
+    height: calc(var(--book-cover-width) / var(--book-cover-aspect-ratio));
 }
 
 .book-grid {
