--- a/views/partials/renderBookGrid.ejs
+++ b/views/partials/renderBookGrid.ejs
@@ -3,14 +3,6 @@
 
 <div class="book-grid <%= bookGridClass %>">
     <% books.forEach(book => { %>
-        <div class="book">
-            <h5><%= book.title %> </h5>
-            <a href="/books/<%= book.ID %>">
-                <img class=" <%= bookCoverClass %>"
-                     src="<%= book.coverImagePath %>" alt="<% book.title %>">
-            </a>
-        </div>
-
-
+        <%- include('./renderBook', {book}) %>
     <% }) %>
 </div>
