--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 @import 'shared/fonts.css';
 @import 'css/general.css';
 @import 'css/header.css';
+@import 'css/footer.css';
 @import 'css/buttons.css';
 @import 'css/forms.css';
 @import 'css/authors.css';
