--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -18,6 +18,15 @@
     <script defer src="/js/fileUpload.js"></script>
     <script defer src="/js/confirmDanger.js"></script>
     <link id="main-css" rel="stylesheet" href="/stylesheets/main.css" type="text/css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <title>Mybrary</title>
 </head>
 <body>
