--- a/views/books/_form_inputs.ejs
+++ b/views/books/_form_inputs.ejs
@@ -6,10 +6,11 @@
 
 
     <div class="form-item">
-        <label>Author:</label>
-        <select readonly="readonly" name="author">
-            <option selected label="<%= user.name %>" value="<%= user.ID %>">
-
+        <label>Genre:</label>
+        <select name="genre">
+            <% for (let genre of genres) { %>
+                <option label="<%= genre.name %>" value="<%= genre.ID %>">
+            <% } %>
         </select>
     </div>
 </div>
